--- a/assets/scss/admin/main.scss
+++ b/assets/scss/admin/main.scss
@@ -28,9 +28,6 @@
 	
 }
 
-.wp-block-columns:last-child {
-  margin-bottom: 0;
-}
 
 .editor-styles-wrapper {
 
