--- a/assets/scss/site/site-normalize/site-normalize.scss
+++ b/assets/scss/site/site-normalize/site-normalize.scss
@@ -59,12 +59,12 @@ img {
 }
 
 
-.wp-block-columns:not(.wp-block-columns:first-child), 
+.wp-block-columns, 
 .wp-block-cover.alignfull:not(.wp-block-cover:first-child) {
     margin-top: var(--cp-gap--xl);
 }
 
-.wp-block-columns:not(.wp-block-columns:last-child), 
+.wp-block-columns, 
 .wp-block-cover.alignfull:not(.wp-block-cover:last-child) {
     margin-bottom: var(--cp-gap--xl);
 }
